# RiotXMPP

./: README.md  RiotXMPP.py  example.py  pyproject.toml
src/: RiotXMPP.py  exceptions.py
src/Handlers/: Auth.py  RiotXMPP.py  __init__.py
